--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -19,10 +19,13 @@
     <% if (locals.error) { %>
       <p class="text-red-500 mb-4"><%= locals.error %></p>
     <% } %>
+    <% if (locals.message) { %>
+      <p class="text-green-500 mb-4"><%= locals.message %></p>
+    <% } %>
     <form method="POST" action="/login">
       <div class="mb-4">
-        <label for="username" class="block text-white font-bold mb-2">Username:</label>
-        <input type="text" name="username" id="username" autocomplete="off" placeholder="Your Username" required class="w-full px-3 py-2 border bg-gray-800 border-gray-700 rounded-md text-white transition-all">
+        <label for="email" class="block text-white font-bold mb-2">Email:</label>
+        <input type="email" name="email" id="email" autocomplete="off" placeholder="johndoe@example.com" required class="w-full px-3 py-2 border bg-gray-800 border-gray-700 rounded-md text-white transition-all">
       </div>
       <div class="mb-4">
         <label for="password" class="block text-white font-bold mb-2">Password:</label>
