--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -31,6 +31,7 @@
         <label for="password" class="block text-white font-bold mb-2">Password:</label>
         <input type="password" name="password" id="password" autocomplete="off" placeholder="••••••••" required class="w-full px-3 py-2 border bg-gray-800 border-gray-700 rounded-md text-white transition-all">
       </div>
+      <a href="/forgotpassword" class="block text-blue-400 hover:text-gray-200 mb-4">Forgot Password?</a>
       <div class="text-center">
         <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-md transition-all">Login</button>
       </div>
